--- a/1304915/C/KRC/User/SchedulerAction.ProjectLeaseTimeMonitorAction.config
+++ b/1304915/C/KRC/User/SchedulerAction.ProjectLeaseTimeMonitorAction.config
@@ -4,7 +4,7 @@
   <ActionName>ProjectLeaseTimeMonitorAction</ActionName>
   <ActionDescription>ProjectLeaseTimeMonitorActionDescription</ActionDescription>
   <FirstTimeToExecute>2010-02-16T08:05:05.0001319-02:00</FirstTimeToExecute>
-  <LastExecutionTime>2022-05-20T15:07:07.256947-03:00</LastExecutionTime>
+  <LastExecutionTime>2022-06-27T16:23:58.4925572-03:00</LastExecutionTime>
   <Enabled>true</Enabled>
   <ActionAssemblyName>C:\KRC\SERVICES\Scheduler\Actions\ProjectLeaseTimeMonitorSchedulerAction.dll</ActionAssemblyName>
   <ActionTypeName>WNP_Scheduler.ProjectLeaseTimeMonitorAction</ActionTypeName>
