--- a/1304915/C/KRC/User/SmartHMI.User.config
+++ b/1304915/C/KRC/User/SmartHMI.User.config
@@ -14,10 +14,10 @@
      <Path>Config-&gt;ConfigUserMode</Path>
     </MenuHistoryItem>
     <MenuHistoryItem MenuRoot="MainMenu">
-     <Path>File-&gt;Archive-&gt;MenuBar#USB-Cabinet-&gt;All</Path>
+     <Path>Monitor-&gt;MonitorIO-&gt;MonitorOverviewInput</Path>
     </MenuHistoryItem>
     <MenuHistoryItem MenuRoot="MainMenu">
-     <Path>Monitor-&gt;MonitorIO-&gt;MonitorOverviewInput</Path>
+     <Path>Config-&gt;ConfigIO-&gt;ConfigAutEx</Path>
     </MenuHistoryItem>
    </MenuItems>
   </MenuItemHistory>
